Adição do esquema de vincular serviços aos barbeiros, e mostrar barbeirso disponiveis ou indisponiveis

--- a/BarberShop/Views/Home/Index.cshtml
+++ b/BarberShop/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
         {
             <div class="col-md-6 col-lg-4 mb-4 barbearia-card-container" data-name="@barbearia.Nome.ToLower()">
                 <div class="card bg-dark text-light shadow-lg rounded-3 h-100 barbearia-card">
-                    <div class="card-body text-center">
+                    <div class="card-body text-center" id="cardBodyHomePage">
                         <!-- Logo da Barbearia com estilo redondo -->
                         <div class="position-relative d-inline-block mb-3">
                             @if (barbearia.Logo != null)
