--- a/BarberShop/Views/Barbeiro/Index.cshtml
+++ b/BarberShop/Views/Barbeiro/Index.cshtml
@@ -137,12 +137,39 @@
                         <label for="Telefone">Telefone</label>
                         <input type="text" class="form-control" id="editarTelefone" name="Telefone" required />
                     </div>
+                    <div class="form-group">
+                        <label for="Servicos">Serviços Associados</label>
+                        <div id="servicosContainer" class="form-control bg-light text-dark" style="height: auto; max-height: 200px; overflow-y: auto;">
+                            <!-- Serviços serão carregados dinamicamente -->
+                        </div>
+                        <button id="btnAdicionarServicoEditar" type="button" class="btn btn-success btn-sm mt-2" data-barbeiro-id="">Adicionar Serviço</button>
+                    </div>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                     <button type="submit" class="btn btn-primary">Salvar</button>
                 </div>
             </form>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="adicionarServicoModal" tabindex="-1" aria-labelledby="adicionarServicoModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="adicionarServicoModalLabel">Adicionar Serviços</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div id="servicosDisponiveisContainer" class="form-control bg-light text-dark" style="height: auto; max-height: 300px; overflow-y: auto;">
+                    <!-- Serviços não vinculados serão carregados dinamicamente -->
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            </div>
         </div>
     </div>
 </div>
